--- a/package.json
+++ b/package.json
@@ -15,7 +15,21 @@
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "express-resource": "^1.0.0",
+    "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^3.0.3",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-compass": "^1.0.3",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.1",
+    "grunt-contrib-csslint": "^0.5.0",
+    "grunt-contrib-cssmin": "^0.13.0",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-uglify": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-csscomb": "^3.1.0",
     "jade": "^1.11.0",
+    "morgan": "^1.6.1",
     "mysql": "^2.9.0",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
