--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "Recycle Bin",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.13.3",
     "consolidate": "^0.13.1",
+    "cookie-parser": "^1.3.5",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
+    "express-namespace": "^0.1.1",
     "express-resource": "^1.0.0",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.3",
@@ -29,6 +32,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-csscomb": "^3.1.0",
     "jade": "^1.11.0",
+    "method-override": "^2.3.5",
     "morgan": "^1.6.1",
     "mysql": "^2.9.0",
     "passport": "^0.3.0",
