--- a/bower.json
+++ b/bower.json
@@ -1,42 +1,43 @@
 {
-	"name": "angular-nodejs",
-	"version": "1.0.0",
-	"homepage": "https://github.com/chacbumbum/angular-nodejs",
-	"authors": [
-		"Dương Thế <nopbongdem@gmail.com>"
-	],
-	"license": "MIT",
-	"keywords": [
-		"Angular",
-		"Nodejs"
-	],
-	"ignore": [
-		"**/.*",
-		"node_modules",
-		"bower_components",
-		"test",
-		"tests"
-	],
-	"dependencies": {
-		"AdminLTE": "admin-lte#~2.3.0",
-		"angular-animate": "~1.4.5",
-		"angular-bootstrap-duallistbox": "~0.1.0",
-		"angular-locker": "~2.0.2",
-		"angular-route": "~1.4.4",
-		"angular-sanitize": "~1.4.4",
-		"angular-summernote": "~0.5.0",
-		"angular-ui-notification": "~0.0.14",
-		"angular-ui-router": "ui-router#~0.2.15",
-		"angular-ui-select2": "~0.0.5",
-		"angularUtils-pagination": "angular-utils-pagination#~0.8.3",
-		"animate.css": "~3.4.0",
-		"lodash": ">=1.3.0",
-		"microplugin": "0.0.x",
-		"ng-file-upload": "~7.0.15",
-		"ng-file-upload-shim": "~7.0.15",
-		"ngstorage": "~0.3.9",
-		"restangular": "~1.5.1",
-		"satellizer": "~0.12.2",
-		"selectize": "~0.12.1"
-	}
+  "name": "angular-nodejs",
+  "version": "1.0.0",
+  "homepage": "https://github.com/chacbumbum/angular-nodejs",
+  "authors": [
+    "Dương Thế <nopbongdem@gmail.com>"
+  ],
+  "license": "MIT",
+  "keywords": [
+    "Angular",
+    "Nodejs"
+  ],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "AdminLTE": "admin-lte#~2.3.0",
+    "angular-animate": "~1.4.5",
+    "angular-bootstrap-duallistbox": "~0.1.0",
+    "angular-locker": "~2.0.2",
+    "angular-route": "~1.4.4",
+    "angular-sanitize": "~1.4.4",
+    "angular-summernote": "~0.5.0",
+    "angular-ui-notification": "~0.0.14",
+    "angular-ui-router": "ui-router#~0.2.15",
+    "angular-ui-select2": "~0.0.5",
+    "angularUtils-pagination": "angular-utils-pagination#~0.8.3",
+    "animate.css": "~3.4.0",
+    "lodash": ">=1.3.0",
+    "microplugin": "0.0.x",
+    "ng-file-upload": "~7.0.15",
+    "ng-file-upload-shim": "~7.0.15",
+    "ngReact": "~0.1.7",
+    "ngstorage": "~0.3.9",
+    "restangular": "~1.5.1",
+    "satellizer": "~0.12.2",
+    "selectize": "~0.12.1"
+  }
 }
