--- a/config/config.json
+++ b/config/config.json
@@ -7,6 +7,7 @@
         "charset": "utf8",
         "dialect": "mysql",
         "autoMigrateOldSchema": true,
+        "logging": false,
         "pool": {
             "maxConnections": 5,
             "minConnections": 0,
