--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "colors": "^1.1.2",
     "consolidate": "^0.13.1",
     "cookie-parser": "^1.3.5",
+    "debug": "^2.2.0",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "express-namespace": "^0.1.1",
     "express-resource": "^1.0.0",
+    "gm": "^1.18.1",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.3",
     "grunt-contrib-clean": "^0.6.0",
