--- a/config/config.json
+++ b/config/config.json
@@ -4,15 +4,28 @@
         "password": "thedollar",
         "database": "learn_node",
         "host": "127.0.0.1",
-        "charset": "utf8",
+        "port": 3306,
         "dialect": "mysql",
         "autoMigrateOldSchema": true,
         "logging": false,
+        "define": {
+            "underscored": true,
+            "freezeTableName": false,
+            "syncOnAssociation": true,
+            "charset": "utf8",
+            "collate": "utf8_unicode_ci",
+            "timestamps": true
+        },
+        "sync": {
+            "force": true
+        },
+        "syncOnAssociation": true,
         "pool": {
             "maxConnections": 5,
             "minConnections": 0,
             "maxIdleTime": 10000
-        }
+        },
+        "language": "vi"
     },
     "test": {
         "username": "root",
