--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sequelize": "^3.6.0",
     "sequelize-cli": "^1.9.0",
     "slug": "^0.9.1",
+    "underscore.string": "^3.2.2",
     "validator": "^4.0.5"
   }
 }
